--- a/docs/_includes/ku-leftmenu.html
+++ b/docs/_includes/ku-leftmenu.html
@@ -1,56 +1,56 @@
 <div class="navmenu navmenu-default navmenu-fixed-left offcanvas-sm">
   <div class="ku-navbar-header">
-    <a role="menuitem" tabindex="-1" href="/">Kommunikation</a>
+    <a tabindex="-1" href="/">Kommunikation</a>
   </div>
   <nav aria-label="Navigation">
-    <ul id="leftmenu" class="nav" role="menubar" aria-label="Venstremenu">
-      <li role="presentation"><a role="menuitem" tabindex="0" href="../ku-global-menus/">Global menus (top and footer)</a>
-      <li role="presentation"><a role="menuitem" tabindex="-1" href="../ku-full-page/">Front page</a></li>
-      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">KU page templates</a>
+    <ul id="leftmenu" class="nav">
+      <li><a tabindex="0" href="../ku-global-menus/">Global menus (top and footer)</a>
+      <li><a tabindex="-1" href="../ku-full-page/">Front page</a></li>
+      <li><a tabindex="-1" href="#">KU page templates</a>
         <ul>
-          <li role="presentation"><a role="menuitem" tabindex="-1" href="../ku-default/">Template with left menu</a></li>
-          <li role="presentation"><a role="menuitem" tabindex="-1" href="../ku-right-sidebar/">Template with left menu and right sidebar</a></li>
-          <li role="presentation"><a role="menuitem" tabindex="-1" href="../ku-searchpage/">Template with search content</a></li>
-          <li role="presentation"><a role="menuitem" tabindex="-1" href="../ku-non-responsive/">Non responsive page</a></li>
+          <li><a tabindex="-1" href="../ku-default/">Template with left menu</a></li>
+          <li><a tabindex="-1" href="../ku-right-sidebar/">Template with left menu and right sidebar</a></li>
+          <li><a tabindex="-1" href="../ku-searchpage/">Template with search content</a></li>
+          <li><a tabindex="-1" href="../ku-non-responsive/">Non responsive page</a></li>
         </ul>
       </li>
-      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Special KU plug-ins</a>
+      <li><a tabindex="-1" href="#">Special KU plug-ins</a>
         <ul>
-          <li role="presentation"><a role="menuitem" tabindex="-1" href="../ku-with-slideshow/">Template with slideshow</a></li>
-          <li role="presentation"><a role="menuitem" tabindex="-1" href="../ku-with-slidegallery/">Template with slide gallery</a></li>
-          <li role="presentation"><a role="menuitem" tabindex="-1" href="../ku-gridboxes/">Template with grid boxes</a></li>
-          <li role="presentation"><a role="menuitem" tabindex="-1" href="../ku-newsboxes/">Template with news boxes</a></li>
-          <li role="presentation"><a role="menuitem" tabindex="-1" href="../ku-datatables/">Template with data tables</a></li>
-          <li role="presentation"><a role="menuitem" tabindex="-1" href="../ku-formvalidation/">Template with form validation</a></li>
-          <li role="presentation"><a role="menuitem" tabindex="-1" href="../ku-loginpage/">Login page</a></li>
-          <li role="presentation"><a role="menuitem" tabindex="-1" href="../ku-cookie-popup/">KU cookie popup</a>
+          <li><a tabindex="-1" href="../ku-with-slideshow/">Template with slideshow</a></li>
+          <li><a tabindex="-1" href="../ku-with-slidegallery/">Template with slide gallery</a></li>
+          <li><a tabindex="-1" href="../ku-gridboxes/">Template with grid boxes</a></li>
+          <li><a tabindex="-1" href="../ku-newsboxes/">Template with news boxes</a></li>
+          <li><a tabindex="-1" href="../ku-datatables/">Template with data tables</a></li>
+          <li><a tabindex="-1" href="../ku-formvalidation/">Template with form validation</a></li>
+          <li><a tabindex="-1" href="../ku-loginpage/">Login page</a></li>
+          <li><a tabindex="-1" href="../ku-cookie-popup/">KU cookie popup</a>
             <ul>
-              <li role="presentation"><a role="menuitem" tabindex="-1" href="../ku-courses/">Kurser.ku.dk</a>
-              <li role="presentation"><a role="menuitem" tabindex="-1" href="../ku-course-details/">Kursus detaljeside</a></li>
-              <li role="presentation"><a role="menuitem" tabindex="-1" href="../ku-schedule/">Kursus skemaside</a></li>
-              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Link 3.3</a>
+              <li><a tabindex="-1" href="../ku-courses/">Kurser.ku.dk</a>
+              <li><a tabindex="-1" href="../ku-course-details/">Kursus detaljeside</a></li>
+              <li><a tabindex="-1" href="../ku-schedule/">Kursus skemaside</a></li>
+              <li><a tabindex="-1" href="#">Link 3.3</a>
                 <ul>
-                  <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Link 4.1 - one more very, very, very, long text</a></li>
-                  <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Link 4.2</a></li>
-                  <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Link 4.3</a></li>
+                  <li><a tabindex="-1" href="#">Link 4.1 - one more very, very, very, long text</a></li>
+                  <li><a tabindex="-1" href="#">Link 4.2</a></li>
+                  <li><a tabindex="-1" href="#">Link 4.3</a></li>
                 </ul>
               </li>
             </ul>
           </li>
         </ul>
       </li>
-      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">More links</a></li>
-      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">One more link</a></li>
+      <li><a tabindex="-1" href="#">More links</a></li>
+      <li><a tabindex="-1" href="#">One more link</a></li>
     </ul>
     <ul id="leftmenu_2" class="nav">
-      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Action</a></li>
-      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Separated link</a></li>
-      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">One more separated link</a></li>
+      <li><a tabindex="-1" href="#">Action</a></li>
+      <li><a tabindex="-1" href="#">Separated link</a></li>
+      <li><a tabindex="-1" href="#">One more separated link</a></li>
     </ul>
     <ul>
-      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Action</a></li>
-      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Separated link</a></li>
-      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">One more separated link</a></li>
+      <li><a tabindex="-1" href="#">Action</a></li>
+      <li><a tabindex="-1" href="#">Separated link</a></li>
+      <li><a tabindex="-1" href="#">One more separated link</a></li>
     </ul>
   </nav>
 </div>
