--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -1487,7 +1487,7 @@
   &:focus {
     .tab-focus-v2();
   }
-  & + & {
-    margin-top: @grid-gutter-height;
-  }
+  // & + & {
+  //   margin-top: @grid-gutter-height;
+  // }
 }
