Tweak for light red boxes

--- a/less/variables.less
+++ b/less/variables.less
@@ -44,7 +44,7 @@
 // Color families
 @red1: @ku-red;
 @red2: #c73028;
-@red3: #e94c25;
+@red3: #db3b0a;
 @blue1: #122947;
 @blue2: #425570;
 @blue3: #bac7d9;
