--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -62,10 +62,10 @@
 }
 
 .tile-cat {
+  min-height: 24px;
   display: flex;
   justify-content: space-between;
   // flex-wrap: wrap;
-
   .date {
     font-weight: 700;
     color: @gray-light;
@@ -134,9 +134,9 @@
 }
 //style for single and double column spans
 
-.right-side,
 .one-two-column .column1,
 .quad-column,
+.right-side,
 .triple-column,
 .two-one-column .column2,
 body:not(.FullWidthFrontpage) .double-column {
