--- a/less/mixins/ku-tiles.less
+++ b/less/mixins/ku-tiles.less
@@ -34,7 +34,12 @@
   }
 
   .header-small {
-    flex-basis: 63%;
+    // flex-basis: 63%;
+    min-height: 24px;
+  }
+
+  .date {
+    flex-basis: 37%;
   }
 
   .tile-img {
