Change id for html5 element

--- a/less/ku-cms-components.less
+++ b/less/ku-cms-components.less
@@ -58,7 +58,7 @@ nav {
 }
 @media (max-width: @screen-xs-max) {
   // Smaller margins on mobile
-  #content {
+  main {
     .container {
       padding-left: (@mobile-grid-gutter-width);
       padding-right: (@mobile-grid-gutter-width);
