--- a/less/mixins/ku-tiles.less
+++ b/less/mixins/ku-tiles.less
@@ -33,8 +33,11 @@
     display: none;
   }
 
+  .tile-cat {
+    flex-shrink: 0;
+  }
+
   .header-small {
-    // flex-basis: 63%;
     min-height: 1.48em;
   }
 
