--- a/docs/assets/css/doctypes/gridforside.css
+++ b/docs/assets/css/doctypes/gridforside.css
@@ -15,17 +15,17 @@
   margin-top: 0;
 }
 
-/* .h1,
-h1 {
-  margin-top: 20px;
-} */
-
 .double-column .gridnyhed .nyhed-teaser {
   display: block;
 }
 
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 768px) {
+  .main-content {
+    padding-top: 23px;
+  }
+}
 
+@media screen and (min-width: 992px) {
   /* Flexible box tweaks*/
   .GridForside .double-column .gridbox.size1 .box2 {
     flex: 0 0 50%;
