--- a/less/type.less
+++ b/less/type.less
@@ -78,7 +78,7 @@ h1 {
   @media (max-width: @screen-xs-max) {
     margin-top: 20px;
   }
-  margin-top: 0;
+  margin-top: 23px;
   font-weight: 600;
 }
 
