Grid box colors

--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -569,7 +569,7 @@
   }
 
   &-red3 {
-    .gridbox-color(@gridbox-text-light; @red3; darken(@red3, 5%); @red3; @red3; 83%);
+    .gridbox-color(@white-color; @red3; darken(@red3, 5%); @red3; @red3; 83%);
   }
   // Blues family
   &-blue1 {
