Changing slider colors

--- a/less/ku-slickslider.less
+++ b/less/ku-slickslider.less
@@ -427,7 +427,7 @@
       }
 
       &-red3 {
-        .slider-overlay-colors(@gridbox-text-light; @red3; 83%);
+        .slider-overlay-colors(@white-color; @red3; 83%);
       }
       // Blues family
       &-blue1 {
