--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -489,5 +489,8 @@ form.gdpr-accept {
     @media (min-width: @screen-sm) {
       margin-top: 3px;
     }
+    ul {
+      margin-left: 40px;
+    }
   }
 }
