--- a/less/type.less
+++ b/less/type.less
@@ -378,12 +378,13 @@ blockquote {
   width: 100%;
   position: relative;
   margin: @grid-gutter-height 0;
-  font-size: @blockquote-font-size;
+  font-size: 1.3em;
   @media (min-width: @screen-sm-min) {
     float: right;
     width: 49%;
     margin: 0 0 7px 10px;
     padding: 0 0 (@line-height-computed / 2) @line-height-computed;
+    font-size: @blockquote-font-size;
   }
   .icon-quote;
 
