--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -260,6 +260,7 @@
 .factbox {
   // Default right aligned
   background-color: @factbox-bg;
+  border: 1px solid @factbox-border;
   font-size: 12px;
   line-height: 1.4;
   padding: 15px;
