--- a/less/variables.less
+++ b/less/variables.less
@@ -153,7 +153,8 @@
 @ku-conversation:       #d8352a;
 
 // Fact box colors:
-@factbox-bg:            #e7e7e7;
+@factbox-bg:            #f5f5f5;
+@factbox-border:        #e3e3e3;
 
 // Org chart:
 @ku-org-chart-line:     2px;
