Table header font-size

--- a/less/tables.less
+++ b/less/tables.less
@@ -62,6 +62,7 @@ th {
   }
   // Bottom align for column headings
   > thead > tr > th {
+    font-size: @font-size-base;
     vertical-align: bottom;
     border-bottom: 1px solid @table-border-color;
   }
