--- a/docs/assets/css/obvius-admin/admin.css
+++ b/docs/assets/css/obvius-admin/admin.css
@@ -5990,10 +5990,12 @@ textarea[id*="extra_html_body"] {
 input.newsbox {
   padding-bottom: 1px;
 }
-
+.sub-theme-picker {
+  margin-top: 13px;
+}
 /* Remove shortly */
 /* New subsite editing interface - comment for cmstest01*/
-#webstedinfo {
+/* #webstedinfo {
   position: absolute;
   right: 0;
   width: 23em;
@@ -6066,6 +6068,6 @@ input.newsbox {
 
 #webstedinfo div.no-website-spacer {
   height: 2.5em;
-}
+} */
 
 /* end */
