Admin color picker

--- a/docs/assets/css/obvius-admin/admin.css
+++ b/docs/assets/css/obvius-admin/admin.css
@@ -5991,11 +5991,11 @@ input.newsbox {
   padding-bottom: 1px;
 }
 .sub-theme-picker {
-  margin-top: 13px;
+  margin-top: 15px;
 }
 /* Remove shortly */
 /* New subsite editing interface - comment for cmstest01*/
-/* #webstedinfo {
+#webstedinfo {
   position: absolute;
   right: 0;
   width: 23em;
@@ -6068,6 +6068,6 @@ input.newsbox {
 
 #webstedinfo div.no-website-spacer {
   height: 2.5em;
-} */
+}
 
 /* end */
